# SuperFlux

./: .gitignore  AGENTS.md  INTEGRATION_GUIDE.md  QUICKSTART_SYNC.md  README.md  SYNC_CHANGELOG.md  SYNC_COMPONENTS_README.md  SYNC_IMPLEMENTATION.md  SYNC_README.md  design-system.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  privacy  proxy-server.js  vite.config.ts
.github/workflows/: build.yml
.specstory/history/: 2026-02-23_16-43Z-produire-une-description-de-pull-request-pour-la-branche-git.md
docs/: SuperPassword.md
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  clipboard_history.rs  lib.rs  main.rs  markdown_vault.rs  password_vault.rs  snippets.rs
src/components/: AddFeedModal.tsx  AudioPlayer.tsx  AuthModal.tsx  BookmarkPanel.tsx  BookmarkReader.tsx  BookmarkSourceList.tsx  ClipboardHistoryList.tsx  ClipboardSettingsPanel.tsx  CommandPalette.tsx  DrawFileList.tsx  EditorFileList.tsx  ExpanderFileList.tsx  ExpandingPanel.tsx  FeedPanel.tsx  GlassIconButton.tsx  GradientText.tsx  MarkdownBacklinksPanel.tsx  MarkdownCodeEditor.tsx  MarkdownCommandPalette.tsx  MarkdownDiffView.tsx  MarkdownFileList.tsx  MarkdownFileTree.tsx  MarkdownGitPanel.tsx  MarkdownPreviewPane.tsx  MarkdownSearchPanel.tsx  MarkdownSidebar.tsx  MarkdownStatusBar.tsx  MarkdownTabBar.tsx  MarkdownTagsPanel.tsx  NoteEditor.tsx  NotePanel.tsx  NoteSourceList.tsx  NoteStickyBoard.tsx  PalettePicker.tsx  PasswordAudit.tsx  PasswordEntryDetail.tsx  PasswordEntryList.tsx  PasswordGenerator.tsx  PasswordImportExport.tsx  PasswordSettings.tsx  (+24 more)
src/contexts/: AuthContext.tsx  ProContext.tsx
src/hooks/: useCommands.ts  useFeedStore.ts  useHighlightStore.ts  useResizablePanels.ts  useSnippetExpander.ts
src/i18n/: en.json  fr.json  index.ts
src/lib/: highlightHtml.ts  supabase.ts  tauriFetch.ts
src/services/: articleExtractor.ts  bookmarkService.ts  drawDocService.ts  editorDocService.ts  feedSearchService.ts  groqService.ts  licenseService.ts  llmService.ts  noteService.ts  notificationService.ts  pandocService.ts  passwordSyncService.ts  providerSync.ts  rssService.ts  rsshubService.ts  syncService.ts  ttsService.ts  (+1 more)
(+25 files in other folders)
