[package]
name = "superflux"
version = "0.1.0"
description = "SuperFlux RSS Reader"
authors = ["you"]
edition = "2021"

[lib]
name = "superflux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
url = "2"
open = "5.3.3"
