[package]
name = "superflux"
version = "0.1.0"
description = "SuperFlux RSS Reader"
authors = ["you"]
edition = "2021"

[lib]
name = "superflux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
url = "2"
open = "5.3.3"
tts = "0.26"
base64 = "0.22"
sysinfo = "0.32"
rfd = "0.15"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
csv = "1"
rand = "0.8"
git2 = "0.20"
serde_yaml = "0.9"
regex = "1"
